# daft-html-community

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  hatch_build.py  pyproject.toml  rust-toolchain.toml
.github/workflows/: pr-test-suite.yml  publish-package.yml
daft_html/: __init__.py
src/: document.rs  ffi.rs  lib.rs  selector.rs
tests/: conftest.py  test_document.py  test_selector.py
