[project]
name = "daft-html"
version = "0.1.0"
description = "Daft native extension for HTML processing — parsing, extraction, and transformation operators"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = ["daft>=0.7.5"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Text Processing :: Markup :: HTML",
]

[project.urls]
Homepage = "https://github.com/daft-engine/daft-html"
Repository = "https://github.com/daft-engine/daft-html"
Issues = "https://github.com/daft-engine/daft-html/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["daft_html"]
# Artifacts: include .so even when gitignored (editable install + local dev)
artifacts = ["daft_html/*.so", "daft_html/*.dylib", "daft_html/*.dll"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[dependency-groups]
dev = [
    "pytest>=8",
    "build>=1.2",
]
